--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -15,6 +15,7 @@
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -27,6 +28,7 @@
                 <outlet property="enterFourDigitPIN" destination="JfG-pe-WIG" id="1uy-00-dh3"/>
                 <outlet property="headerLabel" destination="KSj-ds-clV" id="O05-1i-TJu"/>
                 <outlet property="reEnterFourDigitPIN" destination="Lq4-PM-TIF" id="GDn-1e-dsa"/>
+                <outlet property="subHeaderLabel" destination="nsk-GE-yY9" id="Yo7-yv-DNo"/>
                 <outlet property="toolBar" destination="yAS-5V-1lB" id="f0s-gQ-57a"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -39,16 +41,6 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r4N-aq-d7H">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a new 4 digit Passcode" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSj-ds-clV">
-                            <rect key="frame" x="160" y="119" width="280" height="100"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="280" id="8am-OH-qEp"/>
-                                <constraint firstAttribute="height" constant="100" id="fRG-iI-Ycm"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-qH-aIi">
                             <rect key="frame" x="281" y="50" width="40" height="40"/>
                             <constraints>
@@ -57,7 +49,7 @@
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caz-QS-qcK">
-                            <rect key="frame" x="30" y="344" width="540" height="40"/>
+                            <rect key="frame" x="30" y="379" width="540" height="40"/>
                             <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="KBk-hQ-wP7"/>
@@ -71,7 +63,7 @@
                             </connections>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter 4 digit passcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aa7-UQ-9QT">
-                            <rect key="frame" x="164" y="224" width="273" height="21"/>
+                            <rect key="frame" x="164" y="254" width="273" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="8J8-52-nbC"/>
                                 <constraint firstAttribute="width" constant="273" id="uu8-m4-hoK"/>
@@ -81,7 +73,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-PM-TIF">
-                            <rect key="frame" x="30" y="294" width="540" height="40"/>
+                            <rect key="frame" x="30" y="329" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="wrx-jD-Wft"/>
                             </constraints>
@@ -92,7 +84,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dxE-82-rRE">
-                            <rect key="frame" x="277" y="404" width="46" height="30"/>
+                            <rect key="frame" x="277" y="439" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="46" id="IEI-n0-zVG"/>
                                 <constraint firstAttribute="height" constant="30" id="r4z-dK-HxN"/>
@@ -113,7 +105,7 @@
                             </connections>
                         </button>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
-                            <rect key="frame" x="30" y="244" width="540" height="40"/>
+                            <rect key="frame" x="30" y="279" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="p0G-oz-jq5"/>
                             </constraints>
@@ -123,6 +115,26 @@
                                 <outlet property="delegate" destination="-1" id="BSG-8O-Nyd"/>
                             </connections>
                         </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You’ll use this code whenever you log in to your Savio account from this app." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsk-GE-yY9">
+                            <rect key="frame" x="182" y="229" width="235" height="29"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="29" id="2cT-3G-nBQ"/>
+                                <constraint firstAttribute="width" constant="235" id="gh1-ss-JUn"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="11"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a new 4 digit Passcode" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSj-ds-clV">
+                            <rect key="frame" x="160" y="119" width="280" height="100"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="280" id="8am-OH-qEp"/>
+                                <constraint firstAttribute="height" constant="100" id="fRG-iI-Ycm"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <constraints>
                         <constraint firstItem="Aa7-UQ-9QT" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="1Dk-E1-FeX"/>
@@ -131,6 +143,7 @@
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="top" secondItem="JfG-pe-WIG" secondAttribute="bottom" constant="10" id="ISI-RF-5tS"/>
                         <constraint firstAttribute="trailing" secondItem="Caz-QS-qcK" secondAttribute="trailing" constant="30" id="Jcm-Rf-mtr"/>
                         <constraint firstAttribute="trailing" secondItem="JfG-pe-WIG" secondAttribute="trailing" constant="30" id="Jh6-5G-QHY"/>
+                        <constraint firstItem="nsk-GE-yY9" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="Oxn-Jy-It4"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="PMY-q7-eTH"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="RfY-3f-Da8"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="TNd-fm-YIk"/>
@@ -139,12 +152,13 @@
                         <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" constant="0.5" id="YdO-Xd-1KC"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="119" id="ZUp-F3-4fu"/>
                         <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="140" id="bde-7G-8RC"/>
-                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="25" id="dJg-3l-JaX"/>
+                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="60" id="dJg-3l-JaX"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="dhz-ho-e6v"/>
                         <constraint firstAttribute="bottom" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="220" id="g7H-sB-5rP"/>
                         <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="jgA-dG-GE9"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="10" id="nOa-Si-waG"/>
-                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="5" id="tbb-Dv-yTH"/>
+                        <constraint firstItem="nsk-GE-yY9" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="10" id="oWW-eQ-fdx"/>
+                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="35" id="tbb-Dv-yTH"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="vX3-mx-Hkf"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="150" id="w7A-Pw-Lyh"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="y8p-1a-sXA"/>
