--- a/Savio/RegistrationViewController/RegistrationCell/NumericTextTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/NumericTextTableViewCell.xib
@@ -23,7 +23,7 @@
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sBW-yu-7wk">
                         <rect key="frame" x="30" y="3" width="260" height="44"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                        <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad"/>
                         <connections>
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="ZoE-yk-WfP"/>
                         </connections>
