--- a/Savio/RegistrationViewController/RegistrationCell/PickerTextfildTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/PickerTextfildTableViewCell.xib
@@ -23,7 +23,7 @@
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="owX-vk-vDV">
                         <rect key="frame" x="30" y="4" width="260" height="27"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                         <connections>
                             <action selector="selectDate:" destination="KGk-i7-Jjw" eventType="editingDidBegin" id="zBU-Wq-PZu"/>
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="6pN-Ky-7L5"/>
